--- a/digitalwallet/server/package.json
+++ b/digitalwallet/server/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
     "cors": "^2.8.5",
     "mongoose": "^5.12.13"
+  },
+  "devDependencies": {
+    "express": "^4.17.1"
   }
 }
