--- a/digitalwallet/server/package.json
+++ b/digitalwallet/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start":"nodemon index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no t specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
